# project-sync-for-emeditor

./: .editorconfig  .geminiignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  build.rs  exports.def  install.ps1  mise.toml  package.json  pnpm-lock.yaml  project-sync-for-emeditor.rc  resource.h
.agents/skills/accessing-microsoft-learn-docs/: SKILL.md
.agents/skills/architecture-validator/: SKILL.md
.agents/skills/autonomous-researcher/: SKILL.md
.agents/skills/check-pr-review-comments-graphql/: SKILL.md
.agents/skills/conductor-janitor/: SKILL.md
.agents/skills/conductor-protocol/: SKILL.md
.aiassistant/rules/: authoring-skills-best-practice.md  init.md  review-the-current-branch.md  use GitHub API.md
.codex/rules/: workspace.rules
.gemini/agents/: arch-auditor.md  create-draft-pr.md  track-janitor.md
.gemini/commands/: previously-on-project.toml  review-the-current-branch.toml  update-main.toml
.gemini/hooks/: init_memory.py  mempal_precompact_hook.py  mempal_save_hook.py  restrict_git_add_all.py  suggest_conductor_skill.py  validate_architecture.py
.gemini/policies/: workspace-rules.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: build.yml  danger.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: architecture_rules.md  rust_win32.md
src/: lib.rs
src/application/: mod.rs  sync_project_workflow.rs
src/domain/: mod.rs  project_repository.rs  project_tree_entity.rs
src/gui/: mod.rs
src/infra/: mod.rs
(+52 files in other folders)
